--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
  <article>
 
  <h3>A sample Video</h3>       
- <video width="320" height="240" controls autoplay></video>                                 
- <source src=" ./video.mp4" type="video/mp4"></source>            
+ <video width="320" height="240" controls></video>                                 
+ <source src="./video.mp4" type="video/mp4">          
  </video>              
         
           
